--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@ body {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 0;
+    margin-left: 160px;
+    margin-right: 160px;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 ul {
@@ -72,7 +76,8 @@ ul {
     color: #E5E7EB;
     border-radius: 4px;
     font-weight: bold;
-    padding: 4px;
+    padding: 6px;
+    font-size: 18px;
 }
 
 .section1 img {
@@ -87,18 +92,20 @@ ul {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .infoboxes {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 10px;
     gap: 30px;
 }
 
 .rounded {
-    width: 150px;
+    width: 200px;
     height: auto;
     border: 4px solid blue;
     border-radius: 12px;
@@ -106,7 +113,7 @@ ul {
 
 .caption {
     word-wrap: wrap;
-    width: 150px;
+    width: 200px;
     text-align: center;
 }
 
@@ -116,7 +123,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding: 0 250px 0 250px;
+    padding: 0 500px 0 500px;
 }
 
 .quote {
@@ -136,13 +143,14 @@ ul {
 }
 
 .section4 {
-    margin: 50px 100px 50px 100px;
+    margin: 50px 160px 50px 160px;
     background-color: #3882F6;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 50px 10px 50px;
     color: #E5E7EB;
+    width: 70%;
 }
 
 .left {
@@ -155,10 +163,10 @@ ul {
     text-align: center;
     background-color:#3882F6;
     border: 2px solid #E5E7EB;
-    
     border-radius: 4px;
     font-weight: bold;
     padding: 3px;
+    color: #E5E7EB;
 }
 
 .footer {
@@ -169,4 +177,5 @@ ul {
     align-items: center;
     flex: 1;
     width: 100%;
+    padding: 30px;
 }
